<resources>
    <string name="app_name">StudyTimeTwo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_session_chip_text">save session</string>
    <string name="reset_timer_button">Reset</string>
    <string name="start_timer_button">start</string>
    <string name="week_chip_button_text">week</string>
    <string name="month_chip_button_text">month</string>
    <string name="enter_study_duration">Enter study duration</string>
    <string name="_0">0</string>
</resources>