<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.TimerActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvTimerCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timerTextInputLayout"
            android:layout_width="190dp"
            android:layout_height="79dp"
            android:layout_marginStart="32dp"
            android:hint="@string/enter_study_duration"
            app:hintTextColor="@color/darkBlue"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnReset">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTimeInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/darkBlue" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_timer_button"
            app:layout_constraintEnd_toEndOf="@+id/btnReset"
            app:layout_constraintStart_toStartOf="@+id/btnReset"
            app:layout_constraintTop_toBottomOf="@+id/btnReset" />

        <com.google.android.material.chip.Chip
            android:id="@+id/addStudySessionChip"
            app:chipBackgroundColor="@color/darkBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_session_chip_text"
            android:textColor="@color/white"
            app:chipIcon="@drawable/ic_baseline_save_24"
            app:layout_constraintStart_toStartOf="@+id/timerTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/timerTextInputLayout" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="52dp"
            android:text="@string/reset_timer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimerCountDown" />

    </androidx.constraintlayout.widget.ConstraintLayout>







</layout>